--- a/css/styles.css
+++ b/css/styles.css
@@ -99,9 +99,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-touch-callout: none;
   -webkit-user-select: none !important;
--moz-user-select: -moz-none !important;
--ms-user-select: none !important;
-user-select: none !important;
+  -moz-user-select: -moz-none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+  -webkit-user-drag: none;
 }
 
 hr {
